--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/*.App {
+.App {
   text-align: center;
 }
 
@@ -28,7 +28,9 @@
 
 .small {
   font-size: 0.75rem;
-}*/
+}
+
+/*// ---Events---
 .App {
   text-align: center;
 }
@@ -68,4 +70,4 @@
   }
 }
 
-nav a { margin: 20px;}
+nav a { margin: 20px;}*/
